# NDKDemo

./: .gitignore  README.md  library_build.gradle  native_build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/peerless2012/ndk/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/peerless2012/ndk/demo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/peerless2012/ndk/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib_link_shared/: README.md  build.gradle
lib_link_shared/src/androidTest/java/com/peerless2012/jni/link/: ExampleInstrumentedTest.java
lib_link_shared/src/main/: AndroidManifest.xml
lib_link_shared/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt
lib_link_shared/src/main/cpp/hello-world/: Android.mk  CMakeLists.txt
lib_link_shared/src/main/cpp/hello-world/hello/: Android.mk  CMakeLists.txt
lib_link_shared/src/main/cpp/hello-world/hello/include/: Hello.h
lib_link_shared/src/main/cpp/hello-world/hello/src/: Hello.cpp
lib_link_shared/src/main/cpp/hello-world/include/: HelloWorld.h
lib_link_shared/src/main/cpp/hello-world/src/: HelloWorld.cpp
lib_link_shared/src/main/cpp/hello-world/world/: Android.mk  CMakeLists.txt
lib_link_shared/src/main/cpp/hello-world/world/include/: World.h
lib_link_shared/src/main/cpp/hello-world/world/src/: World.cpp
lib_link_shared/src/main/cpp/include/: LinkMain.h  LinkSharedMain.h
lib_link_shared/src/main/cpp/src/: LinkMain.cpp  LinkSharedMain.cpp
lib_link_shared/src/main/java/com/peerless2012/ndk/shared_link/: LinkSharedTest.java
lib_link_shared/src/test/java/com/peerless2012/jni/link/: ExampleUnitTest.java
lib_link_static/: README.md  build.gradle
lib_link_static/src/androidTest/java/com/peerless2012/ndk/static_link/: ExampleInstrumentedTest.java
lib_link_static/src/main/: AndroidManifest.xml
lib_link_static/src/main/cpp/: Android.mk  CMakeLists.txt
lib_link_static/src/main/cpp/shared/: Android.mk  CMakeLists.txt
lib_link_static/src/main/cpp/shared/include/: CalcullatorImpl.h
lib_link_static/src/main/cpp/shared/src/: CalcullatorImpl.cpp
lib_link_static/src/main/cpp/src/: Android.mk  CMakeLists.txt
lib_link_static/src/main/cpp/src/include/: LinkStaticMain.h  Main.h
lib_link_static/src/main/cpp/src/src/: LinkStaticMain.cpp  Main.cpp
lib_link_static/src/main/cpp/static/: Android.mk  CMakeLists.txt
lib_link_static/src/main/cpp/static/include/: Calculator.h
lib_link_static/src/main/cpp/static/src/: Calculator.cpp
lib_link_static/src/main/java/com/peerless2012/ndk/static_link/: LinkStaticTest.java
lib_link_static/src/test/java/com/peerless2012/ndk/static_link/: ExampleUnitTest.java
lib_module_beneficiary/: README.md  build.gradle
lib_module_beneficiary/src/androidTest/java/com/peerless2012/module/beneficiary/: ExampleInstrumentedTest.java
lib_module_beneficiary/src/main/: AndroidManifest.xml
lib_module_beneficiary/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt
lib_module_beneficiary/src/main/cpp/include/: Beneficiary.h
lib_module_beneficiary/src/main/cpp/src/: Beneficiary.cpp
lib_module_beneficiary/src/main/java/com/peerless2012/module/beneficiary/: BeneficiaryTest.java
lib_module_beneficiary/src/test/java/com/peerless2012/module/beneficiary/: ExampleUnitTest.java
lib_module_provider/: README.md  build.gradle
lib_module_provider/src/androidTest/java/com/peerless2012/ndk/custom/: ExampleInstrumentedTest.java
lib_module_provider/src/main/: AndroidManifest.xml
lib_module_provider/src/main/cpp/: Android.mk  CMakeLists.txt
lib_module_provider/src/main/cpp/include/: Provider.h
lib_module_provider/src/main/cpp/src/: Provider.cpp
lib_module_provider/src/test/java/com/peerless2012/ndk/custom/: ExampleUnitTest.java
lib_prefab_shared/: README.md  build.gradle
lib_prefab_shared/src/main/: AndroidManifest.xml
lib_prefab_shared/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt
lib_prefab_shared/src/main/cpp/include/: PrefabShared.h
lib_prefab_shared/src/main/cpp/src/: PrefabShared.cpp
lib_prefab_static/: README.md  build.gradle
lib_prefab_static/src/main/: AndroidManifest.xml
lib_prefab_static/src/main/cpp/: Android.mk  CMakeLists.txt
lib_prefab_static/src/main/cpp/include/: PrefabFunc.h
lib_prefab_static/src/main/cpp/src/: PrefabFunc.cpp
lib_prefab_use/: README.md  build.gradle
lib_prefab_use/src/main/: AndroidManifest.xml
lib_prefab_use/src/main/cpp/: Android.mk  CMakeLists.txt
lib_prefab_use/src/main/cpp/include/: Prefab.h
lib_prefab_use/src/main/cpp/src/: Prefab.cpp  UsePrefab.cpp
(+14 files in other folders)
